--- a/src/components/SubHeader.css
+++ b/src/components/SubHeader.css
@@ -1,62 +1,69 @@
 body {
-  margin: 0; /* Remove margens padrão do body */
-  padding: 0; /* Remove qualquer padding padrão */
-  box-sizing: border-box; /* Inclui padding e border no cálculo do tamanho */
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .SubHeader {
   background-color: #000000;
   padding-bottom: 20px;
   display: flex;
-  justify-content: space-between; /* Distribui os elementos com espaço entre eles */
+  justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap; /* Permite que os itens quebrem linha em telas menores */
-  padding: 10px 20px; /* Adiciona espaçamento interno */
+  flex-wrap: wrap;
+  padding: 10px 20px;
+  width: 100%; /* Garante que o SubHeader ocupe toda a largura da tela */
+  box-sizing: border-box; /* Garante que o padding não ultrapasse a largura da tela */
 }
 
 .logomarcaTop {
   height: 12vh;
   margin: 0;
-  padding-left: 0; /* Remove margens rígidas */
+  padding-left: 0;
   margin-left: 100px;
 }
 
 .logomarcaDivino {
   width: 150px;
-  padding-right: 0; /* Remove margens rígidas */
+  padding-right: 0;
   margin-right: 100px;
 }
 
 /* Responsividade para telas menores que 768px */
 @media (max-width: 768px) {
   .SubHeader {
-    flex-direction: column; /* Alinha os itens em coluna */
-    align-items: center; /* Centraliza os itens */
+    flex-direction: column;
+    align-items: center;
     padding: 10px 0;
   }
 
   .logomarcaTop {
-    height: 10vh; /* Reduz a altura da logo */
-    padding-left: 0; /* Remove padding em telas pequenas */
-    margin: 10px 0; /* Adiciona margem vertical */
+    height: 10vh;
+    padding-left: 0;
+    margin: 10px 0;
   }
 
   .logomarcaDivino {
-    width: 120px; /* Reduz o tamanho da imagem */
-    margin: 10px 0; /* Centraliza a imagem */
-    padding-right: 0; /* Remove padding lateral */
+    width: 120px;
+    margin: 10px 0;
+    padding-right: 0;
   }
 }
 
 /* Responsividade para telas menores que 480px */
 @media (max-width: 480px) {
   .logomarcaTop {
-    height: 8vh; /* Reduz ainda mais a altura da logo */
-    margin: 10px 0; /* Ajusta o espaçamento */
+    height: 8vh;
+    margin: 10px 0;
   }
 
   .logomarcaDivino {
-    width: 100px; /* Reduz o tamanho da imagem */
-    margin: 10px 0; /* Ajusta o espaçamento */
+    width: 100px;
+    margin: 10px 0;
+  }
+
+  .SubHeader {
+    width: 100%; /* Garante que ocupe toda a largura da tela */
+    padding: 10px 5px; /* Ajusta o espaçamento */
   }
 }
