--- a/src/components/SantoDoDia.css
+++ b/src/components/SantoDoDia.css
@@ -23,7 +23,7 @@
 
 .santo-do-dia .santo-details h3 {
     font-size: 1.2rem;
-    color: #555;
+    color: #E73969;
 }
 
 .santo-do-dia .santo-details img {
