--- a/src/components/AddSantoDoDia.css
+++ b/src/components/AddSantoDoDia.css
@@ -1,7 +1,6 @@
-/* src/components/SantoDoDia.css */
+
 .santo-do-dia {
-    width: 80%;
-    margin: 20px auto;
+    width: 90%;
     background-color: #f9f9f9;
     padding: 20px;
     border-radius: 8px;
@@ -15,19 +14,13 @@
     text-align: center;
 }
 
-.santo-do-dia form {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    align-items: center;
-}
 
 .santo-do-dia input[type="text"],
 .santo-do-dia input[type="file"] {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    width: 94%;
+    width: 95%;
     font-size: 1rem;
     outline: none;
 }
@@ -35,7 +28,16 @@
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    width: 94%;
+    width: 95%;
+    font-size: 1rem;
+    outline: none;
+}
+
+#descricao{
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 95%;
     font-size: 1rem;
     outline: none;
 }
@@ -54,7 +56,7 @@
     font-size: 1rem;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    width: 94%;
+    width: 100%;
 }
 
 .santo-do-dia button:disabled {
@@ -72,7 +74,7 @@
 }
 
 .santo-do-dia .image-preview img {
-    max-width: 100%;
+    max-width: 90%;
     max-height: 300px;
     border-radius: 8px;
     border: 1px solid #ddd;
